# FIR

core/: .gitignore  CMakeLists.txt  conanfile.txt
core/headerlibs/: elegantlist.hpp
core/include/: CodeGen.h  CodeGenContext.h  CodeGenFunction.h  ICodeGenContext.h  ICodeGenFunction.h  Pass.h  PassManager.h  RedCodeGen.h  fir.h  module.h
core/include/LLCG/: llcg.h  lvalue.h
core/include/MetaModel/: FunctionModel.h  MacroModel.h  MapModel.h  MetaModel.h  StructModel.h
core/include/Model/: ByteNode.h  CharNode.h  FloatNode.h  IDNode.h  IntNode.h  Node.h  StringNode.h  TypeNode.h
core/runtimeproj/src/: runtime.cpp
core/src/: CodeGenContext.cpp  CodeGenFunction.cpp  ImportManager.h  MacroTranslate.cpp  MacroTranslate.h  Pass.cpp  PassManager.cpp  RedCodeGen.cpp  fir.cpp  fir.h  idmap.cpp  idmap.h  idtable.cpp  idtable.h  lex.l  main.cpp  module.cpp  module.h  parser.y  redapple_lex.l  redapple_parser.y
core/src/JITEngine/: JITEngine.cpp  JITEngine.h
core/src/LLCG/: llcg.cpp
core/src/LLCG/LLVMLIB/: llcg_llvm.cpp  llcg_llvm.h  llvm_libs.cpp  llvm_type.cpp  llvm_type.h  llvm_value.cpp  llvm_value.h
core/src/Macro/: Classes.cpp  Functions.cpp  Prescan.cpp
core/src/MetaModel/: FunctionModel.cpp  MacroModel.cpp  MapModel.cpp  MetaModel.cpp  StructModel.cpp
core/src/Model/: ByteNode.cpp  CharNode.cpp  FloatNode.cpp  IDNode.cpp  IntNode.cpp  ModelCodeGen.cpp  Node.cpp  StringNode.cpp  TypeNode.cpp
core/src/Utils/: FileUtils.cpp  FileUtils.h  PathUtils.cpp  PathUtils.h  StringEscape.h  string_formatter.h
core/test/: CMakeLists.txt  ParserTest.cpp  test.fir
doc/: demo.fir  取消多遍扫描.md  设计概要.md
